--- a/musicPlayer/PlayerLib/MusicPlayerLib.csproj
+++ b/musicPlayer/PlayerLib/MusicPlayerLib.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="TagLibSharp" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
